package v62.lp;
import "sys/Common.proto";
import "v62/FPTData.proto";

option java_package = "nirvana.hall.protocol.v62.lp";
option java_outer_classname = "CaseProto";

//添加案件
message CaseAddRequest{
    extend sys.BaseRequest{
        optional CaseAddRequest cmd = 9003;
    }
    required Case case = 1;
}
message CaseAddResponse{
    extend sys.BaseResponse{
        optional CaseAddResponse cmd = 9003;
    }
}
//删除案件
message CaseDelRequest{
    extend sys.BaseRequest{
        optional CaseDelRequest cmd = 9004;
    }
    required string case_id = 1;
}
message CaseDelResponse{
    extend sys.BaseResponse{
        optional CaseDelResponse cmd = 9004;
    }
}
//更新案件
message CaseUpdateRequest{
    extend sys.BaseRequest{
        optional CaseUpdateRequest cmd = 9006;
    }
    required Case case = 1;
}
message CaseUpdateResponse{
    extend sys.BaseResponse{
        optional CaseUpdateResponse cmd = 9006;
    }
}
//查询案件
message CaseGetRequest{
    extend sys.BaseRequest{
        optional CaseGetRequest cmd = 9005;
    }
    required string case_id = 1;
}

message CaseGetResponse{
    extend sys.BaseResponse{
        optional CaseGetResponse cmd = 9005;
    }
    optional Case case = 1;
}
